--- a/index.html
+++ b/index.html
@@ -147,7 +147,22 @@
       }
       // Dock handlers
       document.getElementById('finderIcon').addEventListener('click', () => openWindow('Finder', '<h2>Finder</h2><p>Your files go here.</p>'));
-      document.getElementById('browserIcon').addEventListener('click', () => openWindow('Browser', '<iframe src="https://www.youtube.com/watch?v=RSL6KqWKFvo&list=RDRSL6KqWKFvo&start_radio=1" style="width:100%;height:100%;border:none;"></iframe>'));
+document
+  .getElementById('browserIcon')
+  .addEventListener('click', () => {
+    const videoId = 'RSL6KqWKFvo';
+    const playlist = 'RDRSL6KqWKFvo';
+    const src = `https://www.youtube.com/embed/${videoId}?list=${playlist}&autoplay=1&enablejsapi=1`;
+    const iframe = `
+      <iframe
+        src="${src}"
+        style="width:100%; height:100%; border:none;"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>`;
+    openWindow('Browser', iframe);
+  });
       document.getElementById('daggerIcon').addEventListener('click', () => {
         const win = openWindow('Daggerfall', `<div class="dos-container" id="dos-${winCount}"></div>`);
         const dosEl = win.querySelector('.dos-container');
