--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         return win;
       }
       // Dock handlers
-      document.getElementById('finderIcon').addEventListener('click', () => openWindow('Finder', '<h2>Finder</h2><p>Your files go here.</p>'));
+      document
+      .getElementById('finderIcon')
+      .addEventListener('click', () => openWindow('Finder', '<h2>Finder</h2><p>Your files go here.</p>'));
 document
   .getElementById('browserIcon')
   .addEventListener('click', () => {
@@ -163,11 +165,7 @@ document
       </iframe>`;
     openWindow('Browser', iframe);
   });
-      document.getElementById('daggerIcon').addEventListener('click', () => {
-  // The exact src will come from the “Embed” box on Archive.org
-  const embedCode = `
-    document.getElementById('daggerIcon').addEventListener('click', () => {
-  // The exact src will come from the “Embed” box on Archive.org
+document.getElementById('daggerIcon').addEventListener('click', () => {
   const embedCode = `
     <iframe 
       src="https://archive.org/embed/msdos_Elder_Scrolls_The_-_Daggerfall_1996?autoplay=1" 
@@ -175,15 +173,8 @@ document
       allow="autoplay; fullscreen"
       allowfullscreen>
     </iframe>`;
-
   openWindow('Daggerfall', embedCode);
 });
->`;
-
-  openWindow('Daggerfall', embedCode);
-});
-      });
-    });
   </script>
 </body>
 </html>
