--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
     <div id="guestCard" class="userCard">
       <img src="https://i.imgur.com/UPVxPjb.png" alt="Guest">
       <div class="userLabel">Guest</div>
-      <button id="guestBtn" class="loginBtn">Log In</button>
     </div>
   </section>
 
@@ -159,7 +158,6 @@
     <div id="adminLoginCard" class="userCard">
       <img src="https://i.imgur.com/8Km9tLL.jpg" alt="Admin">
       <div class="userLabel">Admin</div>
-      <button id="adminBtn" class="loginBtn">Log In</button>
       <div id="adminPwdBox">
         <!-- Password Entry -->
         <input id="adminPwd" type="password" placeholder="Password">
@@ -170,7 +168,7 @@
 
   <!-- ===== Terminal ===== -->
   <section id="terminal" class="screen hidden">
-    <div>PhillipsOS Terminal — type <code>sudo admin login</code></div>
+    <div>Terminal</div>
     <input id="termInput" autocomplete="off" spellcheck="false">
   </section>
 
