--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       padding-bottom: 80px;
     }
     .userCard { position: absolute; text-align: center; }
-    #guestCard { left: 35%; }
+    #guestCard { left: 50%; }
     #adminLoginCard { left: 50%; transform: translateX(-50%); }
     .userCard img {
       width: 110px; height: 110px; border-radius: 50%;
@@ -222,7 +222,7 @@
     const termInput = document.getElementById('termInput');
     let terminalOpen = false;
     window.addEventListener('keydown', e => {
-      if (e.altKey && e.key.toLowerCase() === 't' && !terminalOpen) {
+      if (e.shiftKey && e.key.toLowerCase() === 't' && !terminalOpen) {
         e.preventDefault();
         terminal.classList.remove('hidden');
         terminalOpen = true;
