--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       position: absolute; inset: 0;
       display: flex; flex-direction: column;
       justify-content: flex-end; align-items: center;
-      padding-bottom: 80px;
     }
     .userCard { position: absolute; text-align: center; }
-    #guestCard { left: 50%; }
+    #guestCard { position: static; }
     #adminLoginCard { left: 50%; transform: translateX(-50%); }
     .userCard img {
       width: 110px; height: 110px; border-radius: 50%;
