--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       justify-content: flex-end; align-items: center;
     }
     .userCard { position: absolute; text-align: center; }
-    #guestCard { position: static; }
+    #guestCard { margin-bottom: 20px; }
     #adminLoginCard { left: 50%; transform: translateX(-50%); }
     .userCard img {
       width: 110px; height: 110px; border-radius: 50%;
