--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         text-align: center;
     }
     .userCard { position: absolute; text-align: center; }
-    #guestCard { margin-bottom: 20px; }
+    #guestCard { position: absolute;
+      top: 38%; /* adjust this value until it's visually aligned with boot logo */
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center; 
+    }
     #adminLoginCard { left: 50%; transform: translateX(-50%); }
     .userCard img {
       width: 110px; height: 110px; border-radius: 50%;
